config/proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcenter-proxy
  namespace: ingress-nginx
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
      name: https
