config/proxy/ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: vcenter-proxy
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: $CONFIG_VCENTER_HUB_ALIAS
    http:
      paths:
      - backend:
          service:
            name: vcenter-proxy
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
